<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginTop="5dp"
        android:text="@string/config" />

    <EditText
        android:id="@+id/editTextServer"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/server"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/editTextUser"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/editTextPass"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/editTextPort"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/port"
        android:inputType="number"
        android:text="" />

    <Button
        android:id="@+id/btnConfig"
        style="@android:style/Widget.Material.Button.Inset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Alterar"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btnDefault"
        style="@android:style/Widget.Material.Button.Inset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Default"
        android:textColor="@android:color/black" />

</LinearLayout>